# cavil-loop

./: .gitignore  AGENTS.md  AGENTS.zh.md  CONTRIBUTING.md  README.md  README.zh.md  SKILL.md  SKILL.zh.md  coding-agent.config.example  pyproject.toml  setup.sh
.github/workflows/: release.yml
coding_agent/: __init__.py  __main__.py  cleanup.py  cli.py  config.py  dispatch.py  gh_utils.py  git_ops.py  log_util.py  poll.py  prompt.py  seed.py  setup_cmd.py  state.py
coding_agent/platform/: __init__.py  github.py  gitlab.py
coding_agent/worker/: __init__.py  claude.py  opencode.py
docs/: architecture.md  architecture.zh.md  collaboration.md  collaboration.zh.md  drivers.md  drivers.zh.md  operations.md  operations.zh.md  persistence.md  security.md
launchd/: dev.luosky.coding-agent-work-loop.plist.template
prompts/: issue-comment.template.md  new-issue.template.md  pr-comment.template.md
scripts/: README.md  _lib.sh  agent-poll.sh  cleanup-issue.sh  create-worktree.sh  dispatch-issue-comment.sh  dispatch-new-issue.sh  dispatch-pr-comment.sh  release.sh  session-log.sh
scripts/drivers/: _common.sh  _template.sh  claude.sh  codex.sh  cursor.sh  opencode.sh
scripts/drivers/token-usage/: claude.sh
systemd/: coding-agent-poll@.service
tests/: test_cli.py  test_config.py  test_log_util.py  test_platform.py  test_prompt.py  test_state.py  test_worker.py
