[project]
name = "coding-agent-work-loop"
version = "0.1.0"
description = "把 GitHub issue/PR 评论变成本机 AI 的输入输出"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
coding-agent = "coding_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coding_agent"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
